ajout reset css

--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
 			<div class="operation">
 				<h2>Fonctionnement</h2>
 				<div class="menu_container">
+					<p class="number">1</p>
 					<i class="fas fa-mobile-alt"></i>
 					<a class="button" href="index.html"><strong>Choississez un restaurant</strong></a>
 				</div>
 				<div class="menu_container">
+					<p class="number">1</p>
 					<i class="fas fa-list-ul"></i>
 					<a class="button" href="index.html"><strong>Composez un menu</strong></a>
 				</div>
 				<div class="menu_container">
+					<p class="number">1</p>
 					<i class="fas fa-store"></i>
 					<a class="button" href="index.html"><strong>Dégustez au restaurant</strong></a>
 				</div>
