ajout des dossiers scss

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>OhMyFood</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dark-sass/src/style.css">
   <link rel="stylesheet" href="fontawesome/css/all.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 	</header>
 	<div class="icone_location">
 		<i class="fas fa-map-marker-alt"></i>
-		<p> Paris, Belleville</p>
+		<p>Paris belle ville</p>
 	</div>
 	<div class="test">
 		<h2>Réservez le menu qui<br/>
@@ -28,17 +28,17 @@
 			<div class="operation">
 				<h2>Fonctionnement</h2>
 				<div class="menu_container">
-					<p class="number">1</p>
+					<p class="number"></p>
 					<i class="fas fa-mobile-alt"></i>
 					<a class="button" href="index.html"><strong>Choississez un restaurant</strong></a>
 				</div>
 				<div class="menu_container">
-					<p class="number">1</p>
+					<p class="number"></p>
 					<i class="fas fa-list-ul"></i>
 					<a class="button" href="index.html"><strong>Composez un menu</strong></a>
 				</div>
 				<div class="menu_container">
-					<p class="number">1</p>
+					<p class="number"></p>
 					<i class="fas fa-store"></i>
 					<a class="button" href="index.html"><strong>Dégustez au restaurant</strong></a>
 				</div>
@@ -50,7 +50,7 @@
 					<figure class="picture">
 						<img src="images/restaurants/jay.jpg" alt="images">
 						<figcaption class="legende">
-							<p>La palette du goût</p>
+							<h2 class="picture__title">La palette du goût</h2>
 							<p>Ménilmontant</p>
 							<p class="icone_heart">
 								<i class="far fa-heart"></i>
@@ -62,7 +62,7 @@
 				<figure class="picture">
 					<img src="images/restaurants/stil.jpg" alt="images">
 					<figcaption class="legende">
-						<p>La note enchantée</p>
+						<h2 class="picture__title">La note enchantée</h2>
 						<p>Charonne</p>
 						<p class="icone_heart">
 							<i class="far fa-heart"></i>
@@ -74,7 +74,7 @@
 				<figure class="picture">
 					<img src="images/restaurants/toa.jpg" alt="images">
 					<figcaption class="legende">
-						<p>À la française</p>
+						<h2 class="picture__title">À la française</h2>
 						<p>Cité Rouge</p>
 						<p class="icone_heart">
 							<i class="far fa-heart"></i>
@@ -86,7 +86,7 @@
 				<figure class="picture">
 					<img src="images/restaurants/louis.jpg" alt="images">
 					<figcaption class="legende">
-						<p>Le délice des Sens</p>
+						<h2>Le délice des Sens</h2>
 						<p>Folie Méricourt</p>
 						<p class="icone_heart">
 							<i class="far fa-heart"></i>
