--- a/menu3.html
+++ b/menu3.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>À la française</title>
-  <link rel="stylesheet" href="page_menu.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>La note enchantée</title>
+    <link rel="stylesheet" href="page_menu.css">
   <link rel="stylesheet" href="fontawesome/css/all.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <header>
+        <a class="arrow" href="index.html">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1>ohmyfood</h1>
+    </header>
+    <img class="banner" src="images/restaurants/stil.jpg" alt="images">
+    <div class="carte_menu">
+        <h1>La note enchantée</h1>
+        <i class=" far fa-heart"></i>
 
+        <div class="button">
+            <h2>Ravioles de foie gras</h2>
+            <p>Accompagnés de leur crème à la truffe</p>
+            <p>25€</p>
+        </div>
+        <div class="button">
+            <h2>Caviar osciétre</h2>
+            <p>Sur blini à la farine de blé noir</p>
+            <p>35€</p>
+        </div>
+        <div class="button">
+            <h2>Homard et espuma de...</h2>
+            <p>Mariné aux zests d'orange</p>
+            <p><strong>20€</strong></p>
+        </div>
+    </div>
 </body>
 </html>
