instruction de la page

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 		<i class="fas fa-map-marker-alt"></i>
 		<p>Paris belle ville</p>
 	</div>
-	<div class="test">
-		<h2>Réservez le menu qui<br/>
+	<div class="heading">
+		<h2 class="heading__header">Réservez le menu qui<br/>
 			 vous convient</h2>
-		<p class="presentation"> Découvrez des restaurants d'éxception<br/>
+		<p class="heading__presentation"> Découvrez des restaurants d'éxception<br/>
 			séléctionnés par nos soins</p>
-		<button class="nav">Explorer nos restaurants</button>
+		<button class="heading__nav">Explorer nos restaurants</button>
 	</div>
 		<article>
 			<div class="operation">
 				<h2>Fonctionnement</h2>
 				<div class="menu_container">
-					<p class="number"></p>
+					<p class="number">1</p>
 					<i class="fas fa-mobile-alt"></i>
 					<a class="button" href="index.html"><strong>Choississez un restaurant</strong></a>
 				</div>
 				<div class="menu_container">
-					<p class="number"></p>
+					<p class="number">1</p>
 					<i class="fas fa-list-ul"></i>
 					<a class="button" href="index.html"><strong>Composez un menu</strong></a>
 				</div>
 				<div class="menu_container">
-					<p class="number"></p>
+					<p class="number">1</p>
 					<i class="fas fa-store"></i>
 					<a class="button" href="index.html"><strong>Dégustez au restaurant</strong></a>
 				</div>
@@ -52,9 +52,7 @@
 						<figcaption class="legende">
 							<h2 class="picture__title">La palette du goût</h2>
 							<p>Ménilmontant</p>
-							<p class="icone_heart">
-								<i class="far fa-heart"></i>
-							</p>
+							<i class="far fa-heart"></i>
 						</figcaption>
 					</figure>
 				</a>
@@ -64,9 +62,7 @@
 					<figcaption class="legende">
 						<h2 class="picture__title">La note enchantée</h2>
 						<p>Charonne</p>
-						<p class="icone_heart">
-							<i class="far fa-heart"></i>
-						</p>
+						<i class="far fa-heart"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -76,9 +72,7 @@
 					<figcaption class="legende">
 						<h2 class="picture__title">À la française</h2>
 						<p>Cité Rouge</p>
-						<p class="icone_heart">
-							<i class="far fa-heart"></i>
-						</p>
+						<i class="far fa-heart"></i>
 					</figcaption>
 				</figure>
 			</a>
@@ -88,9 +82,7 @@
 					<figcaption class="legende">
 						<h2>Le délice des Sens</h2>
 						<p>Folie Méricourt</p>
-						<p class="icone_heart">
-							<i class="far fa-heart"></i>
-						</p>
+						<i class="far fa-heart"></i>
 					</figcaption>
 				</figure>
 			</a>
