--- a/menu1.html
+++ b/menu1.html
@@ -19,70 +19,71 @@
   <div class="carte_menu">
 	  <h1>La palette du goût</h1>
 	  <i class="far fa-heart"></i>
-	  
-  	<div class="button">
-  		<h2>Fricassé d'escargot</h2>
-  		<p>Au piment d'espelette</p>
-  	</div>
-  	<div class="button">
-  		<h2>Foie gras de canard mi-cuit</h2>
-  		<p>Et ses copeaux de truffe noire</p>
-  	</div>
-  	<div class="button">
-  		<h2>Oeuf au plat</h2>
-		  <p>Assaissonné à la truffe sur le lit de ...</p>
-		  <p>20€</p>
-	  </div>
+	  <div class="menu">
+	  	<p class="menu_plat">ENTRÉES</p>
+		<div class="button">
+			<h2>Fricassé d'escargot</h2>
+			<p>Au piment d'espelette</p>
+		</div>
+		<div class="button">
+			<h2>Foie gras de canard mi-cuit</h2>
+			<p>Et ses copeaux de truffe noire</p>
+		</div>
+		<div class="button">
+			<h2>Oeuf au plat</h2>
+			<p>Assaissonné à la truffe sur le lit de ...</p>
+			<p>20€</p>
+		</div>
 
-	  <p class="menu_plat">PLATS</p>
+		<p class="menu_plat">PLATS</p>
 
-	  <di class="button">
-		  <h2>Filet de boeuf aux herbes</h2>
-		  <p>Accompagné de sa ribambelle de légu...</p>
-		  <p>40€</p>
-	  </div>
-	  <div class="button">
-		  <h2>Parmentier de queue de boeuf</h2>
-		  <p>À la truffe noire sur sa purée de panais</p>
-		  <p>35€</p>
-	  </div>
-	  <div class="button">
-		  <h2>Filet de turbot</h2>
-		  <p>Aux agrumes</p>
-		  <p>44€</p>
-	  </div>
+		<di class="button">
+			<h2>Filet de boeuf aux herbes</h2>
+			<p>Accompagné de sa ribambelle de légu...</p>
+			<p>40€</p>
+		</div>
+		<div class="button">
+			<h2>Parmentier de queue de boeuf</h2>
+			<p>À la truffe noire sur sa purée de panais</p>
+			<p>35€</p>
+		</div>
+		<div class="button">
+			<h2>Filet de turbot</h2>
+			<p>Aux agrumes</p>
+			<p>44€</p>
+		</div>
 
-	  <p class="menu_carte">DESSERTS</p>
+		<p class="menu_plat">DESSERTS</p>
 
-	  <div class="button">
-		  <h2>Paris-Brest</h2>
-		  <p>Revisité</p>
-		  <p>18€</p>
-	  </div>
-	  <div class="button">
-		  <h2>Macaron au chocolat d'exception</h2>
-		  <p>Et glace à la vanille de Madagascar</p>
-		  <p>22€</p>
-	  </div>
-	  <div class="button">
-		  <h2>Mousse au chocolat</h2>
-		  <p>Au piment d'espelette et  à la truffe noire</p>
-		  <p>23€</p>
-	  </div>
-	  <a class="button button__commander"><strong>Commander</strong></a>
-  </div>
-    <footer>
-			<h3>ohmyfood</h3>
-			<div class="footer">
-				<i class="fas fa-utensils"></i>
-				<a class="partner" href="index.hmtl"><strong>Proposer un restaurant</strong></a>
-			</div>
-			<div class="footer">
-				<i class="fas fa-hands-helping"></i>
-				<a class="partner" href="index.html"><strong>Devenir partenaire</strong></a>
-			</div>
-			<p>Mentions légales</p>
-			<a class="contact" href="index.html"><strong>Contact</strong></a>
-    </footer>
-</body>
-</html>
+		<div class="button">
+			<h2>Paris-Brest</h2>
+			<p>Revisité</p>
+			<p>18€</p>
+		</div>
+		<div class="button">
+			<h2>Macaron au chocolat d'exception</h2>
+			<p>Et glace à la vanille de Madagascar</p>
+			<p>22€</p>
+		</div>
+		<div class="button">
+			<h2>Mousse au chocolat</h2>
+			<p>Au piment d'espelette et  à la truffe noire</p>
+			<p>23€</p>
+		</div>
+		<a class="button button__commander" href="menu1.html"><strong>Commander</strong></a>
+	</div>
+		<footer>
+				<h3>ohmyfood</h3>
+				<div class="footer">
+					<i class="fas fa-utensils"></i>
+					<a class="partner" href="index.hmtl"><strong>Proposer un restaurant</strong></a>
+				</div>
+				<div class="footer">
+					<i class="fas fa-hands-helping"></i>
+					<a class="partner" href="index.html"><strong>Devenir partenaire</strong></a>
+				</div>
+				<p>Mentions légales</p>
+				<a class="contact" href="index.html"><strong>Contact</strong></a>
+		</footer>
+	</body>
+	</html>
