--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 	<div class="icone_location">
 		<i class="fas fa-map-marker-alt"></i>
-		<p>Paris belle ville</p>
+		<p>Paris, Belle ville</p>
 	</div>
 	<div class="heading">
 		<h2 class="heading__header">Réservez le menu qui<br/>
