--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="menu_container">
 					<p class="number">1</p>
 					<i class="fas fa-mobile-alt"></i>
-					<a class="button" href="index.html"><strong>Choississez un restaurant</strong></a>
+					<a class="button" href="index.html"><strong>choississez un restaurant</strong></a>
 				</div>
 				<div class="menu_container">
 					<p class="number">1</p>
