--- a/menu1.html
+++ b/menu1.html
@@ -84,7 +84,7 @@
 			<p>Au piment d'espelette et  à la truffe noire</p>
 			<p class="menu_price">23€</p>
 		</div>
-		<a class="button button__commander" href="menu1.html"><strong>Commander</strong></a>
+		<a class="button__commander" href="menu1.html"><strong>Commander</strong></a>
 	</div>
 		<footer>
 				<h3>ohmyfood</h3>
