--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 		<article>
 			<div class="operation">
-				<h2>Fonctionnement</h2>
+				<h2 class="fonctionnement">Fonctionnement</h2>
 				<div class="menu_container">
 					<p class="number">1</p>
 					<i class="fas fa-mobile-alt"></i>
@@ -45,7 +45,7 @@
 			</div>
 				<!--Partie figure avec img intégrer-->
 			<div class="restaurant">
-				<h2>Restaurants</h2>
+				<h2 class="restaurants">Restaurants</h2>
 				<a class="menu" href="menu1.html">
 					<figure class="picture">
 						<img src="images/restaurants/jay.jpg" alt="images">
