--- a/menu1.html
+++ b/menu1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>La palette du goût</title>
-  <link rel="stylesheet" href="page_menu.css">
+  <link rel="stylesheet" href="dark-sass/src/page_menu.css">
   <link rel="stylesheet" href="fontawesome/css/all.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
   </header>
   <img  class="banner" src="images/restaurants/jay.jpg" alt="images">
   <div class="carte_menu">
-	  <div class="titre_menu">
+	<div class="titre_menu">
 	  <h1>La palette du goût</h1>
 	  <i class="far fa-heart"></i>
 	</div>
